--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Meme Marketplace</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Discover, upload, and organize memes. Built by Darryl Clay." />
+    <meta property="og:title" content="Meme Marketplace" />
+    <meta property="og:description" content="Discover, upload, and organize memes. Built by Darryl Clay." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/og-image.png" />
+    <meta name="theme-color" content="#10b981" />
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <title>Meme Marketplace</title>
   </head>
   <body class="bg-slate-950 text-slate-50">
     <div id="root"></div>
